--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@gsap/react": "^2.1.2",
     "bcrypt": "^6.0.0",
     "gsap": "^3.14.2",
+    "inngest": "^3.48.1",
     "lucide-react": "^0.562.0",
     "mongodb": "^7.0.0",
     "next": "16.1.1",
     "next-auth": "^4.24.13",
+    "openai": "^6.15.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-hot-toast": "^2.6.0"
