--- a/package.json
+++ b/package.json
@@ -9,15 +9,18 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "@gsap/react": "^2.1.2",
     "bcrypt": "^6.0.0",
+    "formidable": "^3.5.4",
     "gsap": "^3.14.2",
-    "inngest": "^3.48.1",
     "lucide-react": "^0.562.0",
     "mongodb": "^7.0.0",
     "next": "16.1.1",
     "next-auth": "^4.24.13",
     "openai": "^6.15.0",
+    "pdf-parse-fork": "^1.2.0",
+    "pdfjs-dist": "^5.4.530",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-hot-toast": "^2.6.0"
